--- a/src/css/layout/modal.css
+++ b/src/css/layout/modal.css
@@ -16,12 +16,12 @@
 
 .modal-body {
     position: relative;
-    width: 720px;
+    width: 880px;
     height: 560px;
     margin: auto;
     background-color: #fff;
     border-radius: 3px;
-    padding: 20px 15px 0 16px;
+    padding: 20px 16px 0 16px;
 }
 
 .modal-body-title {
@@ -32,7 +32,7 @@
 
 .modal-body-title_text {
     font-weight: 700;
-    margin-bottom: 14px;
+    margin-bottom: 20px;
 }
 
 .modal-footer {
@@ -44,23 +44,25 @@
     left: 0;
     padding-right: 6px;
     bottom: 0;
-    height: 53px;
-    width: 745px;
+    height: 52px;
+    width: 906px;
     background-color: #f3efef;
     border-radius: 0 0 3px 3px;
 }
 
 .combobox-modal-style {
-    width: 207px !important;
+    width: 260.5px !important;
     margin-right: 38px !important;
 }
 
 .combobox-modal-style .combobox-list {
-    width: 218px;
+    width: 271px;
 }
 
 .combobox-modal-style .combobox-items {
-    width: 185px;
+    width: 239px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .close-icon {
@@ -100,15 +102,15 @@
 }
 
 .modal-input_style-left {
-    width: 206px !important;
-    padding-left: 11px !important;
+    width: 256.5px !important;
+    padding-left: 14px !important;
     margin-right: 16px !important;
     padding-right: 10px;
 }
 
 .modal-input_style-special {
-    padding-right: 25px;
-    width: 191px !important;
+    padding-right: 34px;
+    width: 232.5px !important;
 }
 
 .input-quality_style {
@@ -120,7 +122,7 @@
 }
 
 .input-modal_style-right {
-    width: 456px !important;
+    width: 563.5px !important;
     padding-left: 14px !important;
 }
 
