--- a/src/css/base/combobox.css
+++ b/src/css/base/combobox.css
@@ -58,7 +58,7 @@
     top: 100%;
     left: 0;
     right: 0;
-    padding: 5px;
+    padding: 5px 0 5px 7px;
     width: 210px;
     visibility: hidden;
     z-index: 3;
@@ -89,7 +89,7 @@
 }
 
 .combobox-items {
-    padding: 10px 0px 10px 32px;
+    padding: 10px 0px 10px 29px;
     border-radius: 2.5px;
 }
 
