--- a/src/css/layout/modal.css
+++ b/src/css/layout/modal.css
@@ -56,7 +56,8 @@
 }
 
 .combobox-modal-style .combobox-list {
-    width: 271px;
+    width: 275px;
+    padding-left: 8px;
 }
 
 .combobox-modal-style .combobox-items {
@@ -85,7 +86,7 @@
 
 .red-tag {
     position: absolute;
-    left: 100%;
+    right: -8px;
     top: 20%;
     background: url(../../assess/icon/02.2.ThemTaiSan-FormCoDuLieu.png) no-repeat -333px -110px;
     width: 5px;
