--- a/src/css/layout/table.css
+++ b/src/css/layout/table.css
@@ -3,6 +3,7 @@
     font-size: 13px;
     border-spacing: 0;
     border-radius: 3px 3px 0 0;
+    border-bottom: 1px solid rgb(228, 222, 222);
     background-color: #f5f5f5;
 }
 
@@ -91,6 +92,7 @@
 
 .footer-table {
     border-radius: 0 0 4px 4px;
+    box-shadow: 3px 8px 10px rgb(0 0 0 / 16%);
 }
 
 .footer-table .table-column-title {
@@ -169,13 +171,13 @@
 }
 
 .column-style-fix1 {
-    text-align: center;
-    width: 3%;
+    text-align: right;
+    width: 2.2%;
 }
 
 .column-style-fix2 {
     text-align: center;
-    width: 3%;
+    width: 5%;
 }
 
 .column-style-fix3 {
@@ -183,11 +185,11 @@
 }
 
 .column-style-fix4 {
-    width: 11%;
+    width: 13%;
 }
 
 .column-style-fix5 {
-    width: 11%;
+    width: 13%;
 }
 
 .column-style-fix6 {
@@ -196,7 +198,7 @@
 
 .column-style-fix7 {
     text-align: right;
-    width: 9%;
+    width: 5%;
 }
 
 .column-style-fix8 {
@@ -219,7 +221,7 @@
 }
 
 .column-style-fix12 {
-    width: 14%;
+    width: 11.7%;
     font-weight: 500;
 }
 
@@ -230,11 +232,11 @@
 }
 
 .column-style-fix13 {
-    width: 6%;
+    width: 7%;
 }
 
 .column-style-fix14 {
-    width: 21%;
+    width: 27.5%;
 }
 
 .column-style-fix15 {
