--- a/src/css/base/pagination.css
+++ b/src/css/base/pagination.css
@@ -5,10 +5,6 @@
     margin: 0px;
 }
 
-.page-link {
-    font-weight: 500;
-}
-
 .page-item {
     display: list-item;
     text-align: -webkit-match-parent;
@@ -27,6 +23,8 @@
 
 .page-link {
     padding: 6px 8px;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 .active .page-link {
