--- a/src/css/layout/table.css
+++ b/src/css/layout/table.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     padding: 0 16px;
     background-color: #f4f7ff;
-    height: 515px;
+    height: 80vh;
 }
 
 .content-table {
@@ -57,7 +57,7 @@
 }
 
 .table-column-infor>td {
-    height: 37px;
+    height: 39px;
     border-bottom: 1px solid rgb(228, 222, 222);
 }
 
@@ -88,6 +88,7 @@
 .table-footer {
     background-color: #fff;
     border-radius: 0 0 4px 4px;
+    /* border-top: 1px solid rgb(228, 222, 222); */
 }
 
 .footer-table {
