--- a/src/css/layout/table.css
+++ b/src/css/layout/table.css
@@ -22,7 +22,7 @@
     box-shadow: 0 10px 10px rgb(0 0 0 / 16%);
     border-spacing: 0;
     display: block;
-    height: 424px;
+    height: 80vh;
     overflow-y: overlay;
 }
 
