--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,6 +23,19 @@ body {
 
 .visible {
     visibility: visible;
+    -webkit-animation: growDown .2s linear forwards;
+}
+
+@keyframes growDown {
+    0% {
+        transform: scaleY(0)
+    }
+    80% {
+        transform: scaleY(1.1)
+    }
+    100% {
+        transform: scaleY(1)
+    }
 }
 
 .hiden {
