--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -79,6 +79,26 @@
     height: 18px;
 }
 
+.account-option {
+    position: relative;
+    display: flex;
+    align-items: center;
+    top: 70%;
+    right: 265%;
+    padding: 5px;
+    z-index: 1;
+    background: #fff;
+    width: 62px;
+    height: 20px;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 16%);
+    border-radius: 2.5px;
+}
+
+.account-option:hover {
+    background-color: #C7E0F5;
+    border-radius: 4;
+}
+
 .title-menu-item7 {
     position: absolute;
     left: 20px;
