--- a/src/css/layout/table.css
+++ b/src/css/layout/table.css
@@ -88,7 +88,7 @@
 .table-footer {
     background-color: #fff;
     border-radius: 0 0 4px 4px;
-    /* border-top: 1px solid rgb(228, 222, 222); */
+    border-top: 1px solid rgb(228, 222, 222);
 }
 
 .footer-table {
