--- a/src/css/layout/table.css
+++ b/src/css/layout/table.css
@@ -11,8 +11,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 16px;
-    background-color: #f4f7ff;
-    height: 80vh;
+    height: 83vh;
 }
 
 .content-table {
@@ -57,7 +56,7 @@
 }
 
 .table-column-infor>td {
-    height: 39px;
+    height: 33px;
     border-bottom: 1px solid rgb(228, 222, 222);
 }
 
@@ -97,7 +96,7 @@
 }
 
 .footer-table .table-column-title {
-    height: 40px;
+    height: 38px;
 }
 
 .footer-table-text,
@@ -174,6 +173,7 @@
 .column-style-fix1 {
     text-align: right;
     width: 2.2%;
+    padding-left: 7px;
 }
 
 .column-style-fix2 {
@@ -234,10 +234,11 @@
 
 .column-style-fix13 {
     width: 7%;
+    padding-left: 10px;
 }
 
 .column-style-fix14 {
-    width: 27.5%;
+    width: 27.3%;
 }
 
 .column-style-fix15 {
